# aus_senate_site

./: .gitignore  Cargo.toml  DESIGN.md  README.md
src/: calc.rs  error.rs  main.rs  state.rs
static/: setup.js  style.css
templates/: base.hbs  index.hbs  result.hbs  setup.hbs
