[package]
name = "senate_website"
version = "0.1.0"
authors = ["Michael Sproul <micsproul@gmail.com>"]

[dependencies]
iron = "0.5"
router = "0.5"
urlencoded = "0.5"
handlebars = "0.26"
handlebars-iron = "0.25"
aus_senate = { git = "https://github.com/michaelsproul/aus_senate.git" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
